# bbv3

./: .gitignore  Makefile
docs/: Baseball App Agent Architecture.md  backend-api.md
mlb_fantasy_api/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mlb_fantasy_api/app/: config.py  dependencies.py  main.py
mlb_fantasy_api/app/api/v1/: router.py
mlb_fantasy_api/app/api/v1/endpoints/: health.py  players.py  scouting.py  users.py
mlb_fantasy_api/app/core/: exceptions.py  logging.py  supabase.py
mlb_fantasy_api/app/db/: session.py
mlb_fantasy_api/app/db/migrations/: env.py
mlb_fantasy_api/app/db/migrations/versions/: 28913cc30846_create_scouting_reports_table.py  40d1af4434b3_create_user_profiles_table.py  df4c3dcbc239_create_player_registry_and_update_.py
mlb_fantasy_api/app/models/: __init__.py  player.py  player_alias.py  scouting_report.py  user_profile.py
mlb_fantasy_api/app/schemas/: player.py  scouting.py  user.py
mlb_fantasy_api/app/services/: entity_resolver.py  player_service.py  player_sync.py  scouting_service.py  user_service.py
mlb_fantasy_api/scripts/: backfill_player_ids.py  populate_players.py  resolve_report.py
mlb_fantasy_api/tests/: conftest.py  test_auth.py  test_entity_resolver.py  test_logging.py  test_player_service.py  test_players.py  test_scouting.py  test_scouting_service.py
mlb_fantasy_web/: README.md  package-lock.json  package.json
mlb_fantasy_web/app/: globals.css  layout.tsx  page.tsx
mlb_fantasy_web/lib/: mock-data.ts
mlb_fantasy_web/tests/: api-client.test.ts  (+2 more)
(+42 files in other folders)
